--- a/Views/Jokes/Index.cshtml
+++ b/Views/Jokes/Index.cshtml
@@ -15,6 +15,8 @@
             <th>
                 @Html.DisplayNameFor(model => model.JokeText)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CreatedBy)
             </th>
             <th></th>
         </tr>
@@ -24,6 +26,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.JokeText)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CreatedBy)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
